# Geopro_Demo

./: .gitignore  Dockerfile  README.md  convert_nuscenes.py  download_model.py  modernize_data.py  presentation.md  pyproject.toml  requirements.txt  task_log.md
config/: default.yaml  feature_classes.yaml
src/geopro/: __init__.py  cli.py  config.py
src/geopro/detection/: __init__.py  feature_classes.py  postprocess.py  yolo_detector.py
src/geopro/export/: __init__.py  exporter.py
src/geopro/fusion/: __init__.py  geolocation.py  matcher.py  projector.py
src/geopro/ingest/: __init__.py  csv_parser.py  image_loader.py  lidar_reader.py  sync.py
src/geopro/ocr/: __init__.py  arabic_postproc.py  engine.py  text_cleanup.py
src/geopro/pointcloud/: __init__.py  attributes.py  preprocess.py  segmentation.py
src/geopro/storage/: __init__.py  database.py  duckdb_backend.py  models.py
src/geopro/ui/: __init__.py  app.py
src/geopro/ui/templates/: index.html
src/tests/: conftest.py
